unpackaged/pre/first/objects/Partnership_Hour__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Volunteers__c</fullName>
        <label>Annual Volunteers</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenges__c</fullName>
        <inlineHelpText>What challenges did you experience in your partnership this year?</inlineHelpText>
        <label>Challenges</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Church_Name__c</fullName>
        <formula>Church_School_Partnership__r.Church_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Church Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Church_School_Partnership__c</fullName>
        <label>Church School Partnership</label>
        <referenceTo>Church_School_Partnership__c</referenceTo>
        <relationshipName>Partnership_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>How_can_LH_Help__c</fullName>
        <inlineHelpText>Was there anything challenging this semester that we could help with?</inlineHelpText>
        <label>How LH can help</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Literacy_Activities__c</fullName>
        <label>Literacy Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Book Drives</fullName>
                </value>
                <value>
                    <fullName>Classroom Readers</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Literacy</fullName>
                    <isActive>false</isActive>
                    <label>Literacy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Literacy__c</fullName>
        <formula>NOT(ISNULL( Literacy_Activities__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Literacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loving_Houston_Support_This_Year__c</fullName>
        <inlineHelpText>How did Loving Houston support your partnership this year?</inlineHelpText>
        <label>Loving Houston Support This Year</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mentoring_Activities__c</fullName>
        <label>Mentoring Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Kids Hope Mentoring</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>KEYS Mentoring</fullName>
                    <isActive>false</isActive>
                    <label>KEYS Mentoring</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentoring__c</fullName>
        <formula>NOT(ISNULL( Mentoring_Activities__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Volunteers__c</fullName>
        <label>Monthly Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Activities_Description__c</fullName>
        <label>Other Activities Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Activities__c</fullName>
        <label>Other Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After-School Programs</fullName>
                </value>
                <value>
                    <fullName>Backpack Drives</fullName>
                </value>
                <value>
                    <fullName>Beautification/Renovation</fullName>
                </value>
                <value>
                    <fullName>Career Day Speakers</fullName>
                </value>
                <value>
                    <fullName>Christmas Gifts</fullName>
                </value>
                <value>
                    <fullName>Clothing Drives/Donations</fullName>
                </value>
                <value>
                    <fullName>College Prep</fullName>
                </value>
                <value>
                    <fullName>Event Support (i.e. Open House)</fullName>
                </value>
                <value>
                    <fullName>Facilities Usage</fullName>
                </value>
                <value>
                    <fullName>Field Trips</fullName>
                </value>
                <value>
                    <fullName>Financial Support (including gift cards)</fullName>
                </value>
                <value>
                    <fullName>Food Donations/Drives</fullName>
                </value>
                <value>
                    <fullName>In-Kind Donations (i.e fridge, washer/dryer)</fullName>
                </value>
                <value>
                    <fullName>Internships</fullName>
                </value>
                <value>
                    <fullName>Prayer</fullName>
                </value>
                <value>
                    <fullName>School Supply Drives</fullName>
                </value>
                <value>
                    <fullName>Sports (i.e. FCA)</fullName>
                </value>
                <value>
                    <fullName>Student Ministry (i.e. YoungLife)</fullName>
                </value>
                <value>
                    <fullName>Toiletries Drive</fullName>
                </value>
                <value>
                    <fullName>Tutoring</fullName>
                </value>
                <value>
                    <fullName>WatchDogs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Communities in Service</fullName>
                    <isActive>false</isActive>
                    <label>Communities in Service</label>
                </value>
                <value>
                    <fullName>Guest Speakers</fullName>
                    <isActive>false</isActive>
                    <label>Guest Speakers</label>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                    <isActive>false</isActive>
                    <label>Renovations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Empowerment_Activities__c</fullName>
        <label>Parent Empowerment Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ESL Training</fullName>
                </value>
                <value>
                    <fullName>GED Support</fullName>
                </value>
                <value>
                    <fullName>Parent Classes</fullName>
                </value>
                <value>
                    <fullName>PTO Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parents__c</fullName>
        <formula>NOT(ISNULL( Parent_Empowerment_Activities__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_filling_out_form__c</fullName>
        <label>Person filling out form</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Feedback__c</fullName>
        <inlineHelpText>Did Loving Houston help your partnership in any way this semester?</inlineHelpText>
        <label>School Feedback</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <formula>Church_School_Partnership__r.School_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester_Year__c</fullName>
        <formula>TEXT( Semester__c )&amp;&quot; - &quot;&amp;TEXT(Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Semester &amp; Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Stories__c</fullName>
        <label>Success Stories</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Teacher_Support_Appreciation_Activity__c</fullName>
        <label>Teacher Support &amp; Appreciation Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notes of Encouragement</fullName>
                </value>
                <value>
                    <fullName>Appreciation Meal</fullName>
                </value>
                <value>
                    <fullName>Classroom Prep Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>School Supply Drives</fullName>
                    <isActive>false</isActive>
                    <label>School Supply Drives</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <formula>NOT(ISNULL( Teacher_Support_Appreciation_Activity__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teachers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Volunteer_Hours__c</fullName>
        <formula>((Weekly_Volunteers__c *30*30) + ( Monthly_Volunteers__c * 60 * 8) +  (Annual_Volunteers__c * 60))/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Volunteer Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Volunteers__c</fullName>
        <formula>Annual_Volunteers__c +  Monthly_Volunteers__c +  Weekly_Volunteers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual + Monthly + Weekly</inlineHelpText>
        <label>Total Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Total__c</fullName>
        <formula>( of_Volunteers_Week__c * 30 ) + ( of_Volunteers_Month__c *8) + ( of_Volunteers_Year__c * 5 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Hours - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Volunteers__c</fullName>
        <label>Weekly Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2018-2019</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                    <isActive>false</isActive>
                    <label>2020</label>
                </value>
                <value>
                    <fullName>2021</fullName>
                    <isActive>false</isActive>
                    <label>2021</label>
                </value>
                <value>
                    <fullName>2022</fullName>
                    <isActive>false</isActive>
                    <label>2022</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Volunteers_Month__c</fullName>
        <label># of Volunteers/Month</label>
        <summarizedField>Partnership_Activity_Log__c.Monthly__c</summarizedField>
        <summaryForeignKey>Partnership_Activity_Log__c.Partnership_Update__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Total__c</fullName>
        <formula>of_Volunteers_Month__c + of_Volunteers_Week__c + of_Volunteers_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Volunteers - Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Week__c</fullName>
        <label># of Volunteers/Week</label>
        <summarizedField>Partnership_Activity_Log__c.Weekly__c</summarizedField>
        <summaryForeignKey>Partnership_Activity_Log__c.Partnership_Update__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Year__c</fullName>
        <label># of Volunteers/Year</label>
        <summarizedField>Partnership_Activity_Log__c.Yearly__c</summarizedField>
        <summaryForeignKey>Partnership_Activity_Log__c.Partnership_Update__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Partnership Update</label>
    <nameField>
        <displayFormat>Act-{0}</displayFormat>
        <label>CSP Update #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnership Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>